<resources>
    <string name="app_name">Crush The Crave</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_crave" translatable="false">Crave</string>
    <string name="title_activity_smoke" translatable="false">Smoke</string>
    <string name="title_activity_my__awards" translatable="false">My Awards</string>
    <string name="title_activity_my__progress" translatable="false">My Progress</string>
    <string name="title_activity_quit__help" translatable="false">Quit Help</string>
    <string name="title_activity_more" translatable="false">More</string>
    <string name="title_activity_w12" translatable="false">w12</string>
    <string name="title_activity_w23" translatable="false">w23</string>
    <string name="title_activity_health_calculator" translatable="false">HealthCalculator</string>
    <string name="title_activity_game_logic" translatable="false">GameLogic</string>
    <string name="title_activity_slt" translatable="false">Whac-A-Cigarette</string>
    <string name="title_activity_screen_loader" translatable="false">ScreenLoaderActivity</string>
    <string name="title_activity_mole_game" translatable="false">MoleGame</string>
    <string name="title_activity_mole" translatable="false">Mole</string>
    <string name="title_activity_menu" translatable="false">Menu</string>
    <string name="title_activity_hole" translatable="false">Hole</string>
    <string name="title_activity_help" translatable="false">Help</string>
    <string name="title_activity_graphics_mole" translatable="false">GraphicsMole</string>
    <string name="title_activity_game_over" translatable="false">Game Over</string>
    <string name="title_activity_credits" translatable="false">Credits</string>
    <string name="Score">Score: 0 </string>
    <string name="Life">Life: 3 </string>
    <string name="restart">restart</string>
    <string name="quit">quit</string>
    <string name="title_activity_smoking_triggers" translatable="false">Smoking Triggers</string>
    <string name="title_activity_who_we_are" translatable="false">Who We Are</string>
    <string name="title_activity_how_to_use" translatable="false">How To Use</string>
    <string name="title_activity_my_settings" translatable="false">My Settings</string>
    <string name="title_activity_quit_line" translatable="false">Quit Line</string>
    <string name="title_activity_quit_aids" translatable="false">Quit Aids</string>
    <string name="title_activity_crave_crushers" translatable="false">Crave Crushers</string>
    <string name="title_activity_my_quit_plan" translatable="false">My Quit Plan</string>
    <string name="title_activity_google_map" translatable="false">Google Map</string>
    <string name="title_activity_set_date" translatable="false">Set Date</string>
    <string name="title_activity_reset_smoking_status" translatable="false">Reset Smoking Status</string>
    <string name="title_activity_reset_quit_plan" translatable="false">Reset Quit Plan</string>
    <string name="title_activity_feedback" translatable="false">Feedback</string>
    <string name="I_am_Quitting_prompt">I am Quitting:</string>
    <string name="I_am_Quitting_For_prompt">I am Quitting For:</string>
    <string-array name="I_am_Quitting_For">
        <item>My Health</item>
        <item>My Appearance</item>
        <item>My Family</item>
        <item>My Finances</item>
        <item>Other</item>
    </string-array>
    <string name="I_want_to_Quit_prompt">I want to Quit:</string>
    <string-array name="I_want_to_Quit">
        <item>Today</item>
        <item>In the near Future</item>
        <item>I have already quit</item>
    </string-array>
    <string name="title_activity_my_information" translatable="false">My Information</string>
    <string name="title_activity_distract_me" translatable="false">Distract Me</string>
    <string name="title_activity_tic_tac_toe" translatable="false">TicTacToe</string>
    <string name="title_activity_handling_triggers" translatable="false">Handling Triggers</string>
    <string name="title_activity_withdrawal_and_cravings" translatable="false">Withdrawal And Cravings</string>
    <string name="title_activity_handling_slips" translatable="false">Handling Slips</string>
    <string name="title_activity_my_personalization" translatable="false">My Personalization</string>
    <string name="I_am_with_prompt">I am with:</string>
    <string-array name="I_am_with">
        <item>friends</item>
        <item>family</item>
        <item>no one</item>
        <item>add other</item>
    </string-array>
    <string name="I_am_at_prompt">i am at:</string>
    <string-array name="I_am_at">
        <item>home</item>
        <item>work</item>
        <item>school</item>
        <item>bar/restaurant</item>
        <item>party</item>
        <item>add other</item>
    </string-array>
    <string name="I_am_feeling_prompt">I am feeling:</string>
    <string-array name="I_am_feeling">
        <item>stressed</item>
        <item>sad</item>
        <item>bored</item>
        <item>angry</item>
        <item>hungry</item>
        <item>lonely</item>
        <item>tired</item>
        <item>fine</item>
        <item>add other</item>
    </string-array>
    <string name="gender_prompt">Gender</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Prefer not to disclose</item>
    </string-array>
    <string name="time_zone_prompt">Time Zone:</string>
    <string-array name="time_zone">
        <item>Eastern</item>
        <item>Pacific</item>
        <item>Mountain</item>
        <item>Central</item>
        <item>Atlantic</item>
        <item>Newfoundland</item>
    </string-array>
    <string name="title_activity_add_other_sp4" translatable="false">addOtherSp4</string>
    <string name="title_activity_add_other_sp5" translatable="false">addOtherSp5</string>
    <string name="title_activity_add_other_sp6" translatable="false">addOtherSp6</string>
    <string name="title_activity_committed" translatable="false">Committed</string>
    <string name="title_activity_award_quit_date" translatable="false">AwardQuitDate</string>
    <string name="title_activity_award_day1" translatable="false">AwardDay1</string>
    <string name="title_activity_award_week1" translatable="false">AwardWeek1</string>
    <string name="title_activity_award_week3" translatable="false">AwardWeek3</string>
    <string name="title_activity_award_month1" translatable="false">AwardMonth1</string>
    <string name="title_activity_award100_cig" translatable="false">Award100Cig</string>
    <string name="title_activity_award250_cig" translatable="false">Award250Cig</string>
    <string name="title_activity_award500_cig" translatable="false">Award500Cig</string>
    <string name="title_activity_award_smoking_tracker" translatable="false">AwardSmokingTracker</string>
    <string name="title_activity_award_craving_tracker" translatable="false">AwardCravingTracker</string>
    <string name="title_activity_award100_saved" translatable="false">Award100Saved</string>
    <string name="title_activity_award250_saved" translatable="false">Award250Saved</string>
    <string name="title_activity_award500_saved" translatable="false">Award500Saved</string>
    <string name="title_activity_award1000_saved" translatable="false">Award1000Saved</string>
    <string name="title_activity_award_breathe_easier" translatable="false">AwardBreatheEasier</string>
    <string name="title_activity_award_breathe_easier2" translatable="false">AwardBreatheEasier2</string>
    <string name="title_activity_award_o2" translatable="false">AwardO2</string>
    <string name="title_activity_award_better_health" translatable="false">AwardBetterHealth</string>
    <string name="title_activity_award_nicotine_free" translatable="false">AwardNicotineFree</string>
    <string name="title_activity_award_better_taste_and_smell" translatable="false">AwardBetterTasteAndSmell</string>
    <string name="aaaa">Home</string>
    <string name="bbbb">Awards</string>
    <string name="cccc">proogress</string>
    <string name="dddd">quit help</string>
    <string name="eeee">more</string>
    <string name="az">Record your triggers</string>
    <string name="aw">I am with:</string>
    <string name="ad">I am at:</string>
    <string name="af">I am feelings:</string>
    <string name="gsds">Keep track of Cravings</string>
    <string name="sfdw">CONGRATULATIONS!</string>
    <string name="sfw3">This Award is obtained when you keep track of your cravings for 3 days in a row.</string>
    <string name="fwee">SHARE</string>
    <string name="wefwe">Home</string>
    <string name="wfewef">Awards</string>
    <string name="svds">Progress</string>
    <string name="vgds">Quit help</string>
    <string name="wefw">More</string>
    <string name="sdlfjks">Crush the Crave is a quit smoking mobile app for young adult smokers developed by the Propel Centre for Population Health impact at the University of Waterloo (Propel) in Partnership with Leave the Pack Behind at Brock University, with funding from Health Canada and promotional support provided by the Canadian Cancer Society</string>
    <string name="kljlk">Parteners</string>
    <string name="lkjl">PROPEL\nPropel\'s vision is to prevent cancer and chronic disease by improving health at a population level. Propel conducts impact-oriented research, evaluation, and knowledge exchange in the areas of tobacco conol and youth health. For more information about Propel visit http://www.propel.uwaterloo.ca \nLEAVE THE PACK BEHIND\nA big thank you to Leave the Pack Behind(LTPB) for allowing us to adapt much of the content for the app from their self-help smoking cessation program Smoke I quit (http://www.leavethepackbehind.org/smoke_quit.php). Their experience and expertise in young adult cessation has been a tremendous asset. Leave The Pack Behind (LTPB) is an age-tailored tobacco control initiative funded by the Ontario Ministry of Health and Long-Term Care. LTPB provides year-round programs and services that increase tobacco awareness and cessation supports available to students at Ontario Universities and Colleges. For more information about LTPB visit http://wwww.ltpb.org</string>
    <string name="xcv">Special Thanks</string>
    <string name="lkjnm">The Canadian Cancer Society is a national, community-based organization of volunteers whose mission is the eradication of cancer and the enhancement of the quality of life of people living with cancer. Read more: http://www.cancer.ca/en/about-us/our-mission/?region=on#ixzz3agmH8cBP. Smoking is responsible for 85%% of lung cancer and 30%% or all cancer deaths. The Canadian Cancer Society is committed to help people understand the risks of smoking and second-hand smoke, in addiion to providing smokers with the tools and support they need to be successfully tobacco-free.</string>
    <string name="lkjlkn">Smokers\' Helpline has proven, free and personalized tools to help you quit successfully. Smokers\' Helpline offers non-judgmental support and information by phone, online and text messaging at 1 877 513 5333 and SmokersHelpline.ca</string>
    <string name="lkjlk">Design and Engineering</string>
    <string name="lngwe">Programmer: Henry Zhu | Supported by Matt VanderMeer\nUniversity Of Waterloo, Faculty of Applied Health Sciences, Propel Centre For Population Health Impact\nThe Mini Game of Whack a Mole is released under GNU GPL v2 License from http://whack-a-mole-android.googlecode.com/svn/ \nCoded and designed by Lorenzo Lambertini contact: lorenzo.lambertini@gmail.coms Modified by Henry Zhu contact hrzhu@uwaterloo.ca\nGraph uses AndroidPlot #Swag</string>
    <string name="kldf">FUNDING</string>
    <string name="sdfsdc">SAVE</string>
    <string name="fdhdfghv">MY SMOKING TRIGGERS</string>
</resources>