<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.hrzhulocal.crushthecraveprototype2.SmokeActivity"
    android:id="@+id/SM">

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/textView7"
        android:text="@string/az"
        android:textColor="#ffffffff"
        android:layout_above="@+id/spinner4"
        android:layout_toRightOf="@+id/textView77"
        android:layout_toEndOf="@+id/textView77" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/tabhome_sel" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:background="@drawable/tabawards_sel"
        android:clickable="true"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/tabprogress_sel"
        android:clickable="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:clickable="true"
        android:background="@drawable/tabmore_sel"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton5"
        android:background="@drawable/tabquithelpline_sel"
        android:clickable="true"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aaaa"
        android:id="@+id/textView10"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView12"
        android:layout_toLeftOf="@+id/imageButton2"
        android:layout_toStartOf="@+id/imageButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bbbb"
        android:id="@+id/textView11"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView12"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cccc"
        android:id="@+id/textView12"
        android:layout_below="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dddd"
        android:id="@+id/textView13"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView12"
        android:layout_toRightOf="@+id/imageButton3"
        android:layout_toEndOf="@+id/imageButton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eeee"
        android:id="@+id/textView14"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView13"
        android:layout_toRightOf="@+id/imageButton5"
        android:layout_toEndOf="@+id/imageButton5" />

    <ImageView
        android:layout_width="145dp"
        android:layout_height="116dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/imageButton4"
        android:layout_toEndOf="@+id/textView76"
        android:layout_toRightOf="@+id/textView76" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textColor="#ffffc508"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fdhdfghv"
        android:id="@+id/button3"
        android:layout_above="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdfsdc"
        android:id="@+id/button4"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/imageButton3"
        android:layout_alignEnd="@+id/imageButton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:layout_above="@+id/textView7"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner4"
        android:entries="@array/I_am_with"
        android:prompt="@string/I_am_with_prompt"
        android:hint="I am with: "
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/btnsighup_new"
        android:layout_above="@+id/spinner5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spinner5"
        android:layout_alignStart="@+id/spinner5" />


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner5"
        android:entries="@array/I_am_at"
        android:prompt="@string/I_am_at_prompt"
        android:textColor="#FFFFFF"
        android:textSize="50sp"

        android:hint="I am at: "
        android:textColorHint="#FFFFFF"
        android:background="@drawable/btnsighup_new"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner6"
        android:entries="@array/I_am_feeling"
        android:prompt="@string/I_am_feeling_prompt"
        android:textColor="#FFFFFF"
        android:textSize="50sp"

        android:hint="I am feeling:"
        android:textColorHint="#FFFFFF"
        android:background="@drawable/btnsighup_new"
        android:layout_below="@+id/spinner5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aw"
        android:id="@+id/textView75"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/spinner4"
        android:layout_alignLeft="@+id/textView76"
        android:layout_alignStart="@+id/textView76" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad"
        android:id="@+id/textView76"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/spinner5"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/af"
        android:id="@+id/textView77"
        android:textColor="#ffffffff"
        android:layout_below="@+id/spinner5"
        android:layout_alignLeft="@+id/textView76"
        android:layout_alignStart="@+id/textView76" />


</RelativeLayout>
