<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.hrzhulocal.crushthecraveprototype2.WhoWeAre"
    android:background="@drawable/bg">

    <ScrollView
        android:id="@+id/who_we_are_textviewLayoutAcrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/who_we_are_textviewLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/who_we_are_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/sdlfjks"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_partner_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="8dp"
                android:text="@string/kljlk"
                android:textStyle="bold"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_partner_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/lkjl"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_specialThanks_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/xcv"
                android:textStyle="bold"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_specialThanks_Value1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/lkjnm"
                android:textColor="#fff" />

            <ImageView
                android:id="@+id/who_we_are_imageview_specialThanks_ccsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ccancer_s_whoweare"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/who_we_are_textview_specialThanks_Value2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/lkjlkn"
                android:textColor="#fff" />
            <ImageView
                android:id="@+id/who_we_are_imageview_specialThanks_shImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shelpline_whoweare"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:layout_marginLeft="6dp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/who_we_are_textview_designnBuild_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/lkjlk"
                android:textStyle="bold"
                android:textColor="#fff"
                />

            <TextView
                android:id="@+id/who_we_are_textview_designnBuild_Value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/lngwe"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_funding_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/kldf"
                android:textStyle="bold"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/who_we_are_textview_funding_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:padding="5dp"
                android:drawableTop="@drawable/healthcanadalogo"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
