<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hrzhulocal.crushthecraveprototype2.Committed"
    android:background="@drawable/bg"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gsds"
        android:id="@+id/textView105"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textColor="#ffffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_below="@+id/textView105"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:background="@drawable/iconcarvings_sel"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfdw"
        android:id="@+id/textView106"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfw3"
        android:id="@+id/textView107"
        android:layout_below="@+id/textView106"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fbIDquitdate"
        android:layout_marginTop="56dp"
        android:background="@drawable/btnsighup_new"
        android:layout_below="@+id/textView107"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fwee"
        android:id="@+id/textView108"
        android:layout_alignTop="@+id/fbIDquitdate"
        android:layout_centerHorizontal="true" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:clickable="true"
        android:background="@drawable/tabhome_sel"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:background="@drawable/tabawards_sel"
        android:clickable="true"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:background="@drawable/tabprogress_sel"
        android:clickable="true"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:background="@drawable/tabquithelpline_sel"
        android:clickable="true"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_toRightOf="@+id/textView108"
        android:layout_toEndOf="@+id/textView108" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton5"
        android:background="@drawable/tabmore_sel"
        android:clickable="true"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wefwe"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView2"
        android:layout_toLeftOf="@+id/imageButton2"
        android:layout_toStartOf="@+id/imageButton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wfewef"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView3"
        android:layout_toLeftOf="@+id/imageButton3"
        android:layout_toStartOf="@+id/imageButton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/svds"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vgds"
        android:id="@+id/textView4"
        android:textColor="#ffffffff"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/imageButton3"
        android:layout_toEndOf="@+id/imageButton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wefw"
        android:id="@+id/textView5"
        android:textColor="#ffffffff"
        android:layout_below="@+id/imageButton4"
        android:layout_toRightOf="@+id/imageButton4"
        android:layout_toEndOf="@+id/imageButton4" />
</RelativeLayout>